--- a/assets/css/unminified/style-modern.css
+++ b/assets/css/unminified/style-modern.css
@@ -5398,6 +5398,12 @@ input[type="color"]::-webkit-color-swatch {
   margin-top: 0;
 }
 
+@media (max-width: 544px) {
+  .page .comments-area {
+    margin-top: .75em;
+  }
+}
+
 /*----------  Classic Single Post Common Stylesheet  ----------*/
 /**
  *	Common Stylesheet of Single Post
