--- a/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form-skin-1.scss
@@ -390,3 +390,11 @@
         margin-top: 0;
     }
 }
+
+@media (max-width: $mx-col-sm) {
+.page {
+    .comments-area {
+            margin-top: .75em;
+        }
+    }
+}
